# snapchat-memories-downloader

./: .gitignore  README.md  main.py  pyproject.toml
src/: consts.py  core.py  utils.py
